--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -8,64 +8,75 @@
   .highlighter-rouge & {
     background: #2b2b2b;
   }
-
-  .c     { color: #998; font-style: italic } // Comment
-  .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { font-weight: bold } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #998; font-style: italic } // Comment.Multiline
-  .cp    { color: #999; font-weight: bold } // Comment.Preproc
-  .c1    { color: #998; font-style: italic } // Comment.Single
-  .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
-  .ge    { font-style: italic } // Generic.Emph
-  .gr    { color: #a00 } // Generic.Error
-  .gh    { color: #999 } // Generic.Heading
-  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
-  .gs    { font-weight: bold } // Generic.Strong
-  .gu    { color: #aaa } // Generic.Subheading
-  .gt    { color: #a00 } // Generic.Traceback
-  .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { font-weight: bold } // Keyword.Declaration
-  .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #458; font-weight: bold } // Keyword.Type
-  .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #0086B3 } // Name.Builtin
-  .nc    { color: #458; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
-  .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #900; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
-  .ow    { font-weight: bold } // Operator.Word
-  .w     { color: #bbb } // Text.Whitespace
-  .mf    { color: #099 } // Literal.Number.Float
-  .mh    { color: #099 } // Literal.Number.Hex
-  .mi    { color: #099 } // Literal.Number.Integer
-  .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #d14 } // Literal.String.Backtick
-  .sc    { color: #d14 } // Literal.String.Char
-  .sd    { color: #d14 } // Literal.String.Doc
-  .s2    { color: #d14 } // Literal.String.Double
-  .se    { color: #d14 } // Literal.String.Escape
-  .sh    { color: #d14 } // Literal.String.Heredoc
-  .si    { color: #d14 } // Literal.String.Interpol
-  .sx    { color: #d14 } // Literal.String.Other
-  .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #d14 } // Literal.String.Single
-  .ss    { color: #990073 } // Literal.String.Symbol
-  .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
-  .il    { color: #099 } // Literal.Number.Integer.Long
 }
+
+.highlight pre { background-color: #404040 }
+.highlight .hll { background-color: #404040 }
+.highlight .c { color: #45BB3E } /* Comment */
+.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+.highlight .g { color: #E1E2E7 } /* Generic */
+.highlight .k { color: #D7008F } /* Keyword */
+.highlight .l { color: #E1E2E7 } /* Literal */
+.highlight .n { color: #E1E2E7 } /* Name */
+.highlight .o { color: #E1E2E7 } /* Operator */
+.highlight .x { color: #E1E2E7 } /* Other */
+.highlight .p { color: #E1E2E7 } /* Punctuation */
+.highlight .cm { color: #45BB3E } /* Comment.Multiline */
+.highlight .cp { color: #cd2828; font-weight: bold } /* Comment.Preproc */
+.highlight .c1 { color: #45BB3E } /* Comment.Single */
+.highlight .cs { color: #e50808; font-weight: bold; background-color: #520000 } /* Comment.Special */
+.highlight .gd { color: #d22323 } /* Generic.Deleted */
+.highlight .ge { color: #E1E2E7; font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #d22323 } /* Generic.Error */
+.highlight .gh { color: #ffffff; font-weight: bold } /* Generic.Heading */
+.highlight .gi { color: #589819 } /* Generic.Inserted */
+.highlight .go { color: #cccccc } /* Generic.Output */
+.highlight .gp { color: #aaaaaa } /* Generic.Prompt */
+.highlight .gs { color: #E1E2E7; font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #ffffff; text-decoration: underline } /* Generic.Subheading */
+.highlight .gt { color: #d22323 } /* Generic.Traceback */
+.highlight .kc { color: #D7008F; font-weight: bold } /* Keyword.Constant */
+.highlight .kd { color: #D7008F } /* Keyword.Declaration */
+.highlight .kn { color: #D7008F; font-weight: bold } /* Keyword.Namespace */
+.highlight .kp { color: #D7008F } /* Keyword.Pseudo */
+.highlight .kr { color: #D7008F; font-weight: bold } /* Keyword.Reserved */
+.highlight .kt { color: #1DA9A2 } /* Keyword.Type */
+.highlight .ld { color: #E1E2E7 } /* Literal.Date */
+.highlight .m { color: #149C92 } /* Literal.Number */
+.highlight .s { color: #D3232E } /* Literal.String */
+.highlight .na { color: #bbbbbb } /* Name.Attribute */
+.highlight .nb { color: #24909d } /* Name.Builtin */
+.highlight .nc { color: #447fcf; text-decoration: underline } /* Name.Class */
+.highlight .no { color: #1DA9A2 } /* Name.Constant */
+.highlight .nd { color: #ffa500 } /* Name.Decorator */
+.highlight .ni { color: #E1E2E7 } /* Name.Entity */
+.highlight .ne { color: #bbbbbb } /* Name.Exception */
+.highlight .nf { color: #447fcf } /* Name.Function */
+.highlight .nl { color: #E1E2E7 } /* Name.Label */
+.highlight .nn { color: #447fcf; text-decoration: underline } /* Name.Namespace */
+.highlight .nx { color: #E1E2E7 } /* Name.Other */
+.highlight .py { color: #E1E2E7 } /* Name.Property */
+.highlight .nt { color: #D7008F } /* Name.Tag */
+.highlight .nv { color: #E1E2E7 } /* Name.Variable */
+.highlight .ow { color: #D7008F } /* Operator.Word */
+.highlight .w { color: #666666 } /* Text.Whitespace */
+.highlight .mf { color: #149C92 } /* Literal.Number.Float */
+.highlight .mh { color: #149C92 } /* Literal.Number.Hex */
+.highlight .mi { color: #149C92 } /* Literal.Number.Integer */
+.highlight .mo { color: #149C92 } /* Literal.Number.Oct */
+.highlight .sb { color: #D3232E } /* Literal.String.Backtick */
+.highlight .sc { color: #D3232E } /* Literal.String.Char */
+.highlight .sd { color: #D3232E } /* Literal.String.Doc */
+.highlight .s2 { color: #D3232E } /* Literal.String.Double */
+.highlight .se { color: #D3232E } /* Literal.String.Escape */
+.highlight .sh { color: #D3232E } /* Literal.String.Heredoc */
+.highlight .si { color: #D3232E } /* Literal.String.Interpol */
+.highlight .sx { color: #ffa500 } /* Literal.String.Other */
+.highlight .sr { color: #D3232E } /* Literal.String.Regex */
+.highlight .s1 { color: #D3232E } /* Literal.String.Single */
+.highlight .ss { color: #D3232E } /* Literal.String.Symbol */
+.highlight .bp { color: #24909d } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #1DA9A2 } /* Name.Variable.Class */
+.highlight .vg { color: #1DA9A2 } /* Name.Variable.Global */
+.highlight .vi { color: #1DA9A2 } /* Name.Variable.Instance */
+.highlight .il { color: #149C92 } /* Literal.Number.Integer.Long */
